force-app/main/default/objects/ssot__PartyRelationshipType__dlm/fields/ssot__PartyRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyRole__c</fullName>
    <label>Party Role</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>