force-app/main/default/objects/ssot__PartyRelationshipType__dlm/fields/ssot__rel_1726825234103_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825234103_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyRelationshipType_RelatedInverse_rel</label>
    <referenceTo>ssot__PartyRelationshipType__dlm</referenceTo>
    <relationshipLabel>PartyRelationshipType_RelatedInverse_rel</relationshipLabel>
    <relationshipName>rel_1726825234103_end</relationshipName>
    <type>Lookup</type>
</CustomField>